--- a/css/main.css
+++ b/css/main.css
@@ -84,16 +84,6 @@ footer {
   height: 800px;
   object-fit: cover; }
 
-.h3_mujer {
-  width: 100%;
-  background-color: #fff;
-  padding: 40px 0px;
-  text-align: center;
-  -webkit-text-stroke: 2px #000;
-  color: transparent;
-  font-size: 60px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
-
 .tarjeta_mujer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -127,21 +117,24 @@ footer {
 @media (max-width: 576px) {
   .tarjeta_mujer {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 20px 0px; } }
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 15px;
+    justify-content: center; }
+    .tarjeta_mujer .galeria {
+      width: 450px; } }
 
 @media (min-width: 576px) and (max-width: 991px) {
   .tarjeta_mujer {
     margin: 20px 0px; } }
 
-.h3_hombre {
+.h2_hombre, .h2_mujer {
   width: 100%;
   background-color: #fff;
   padding: 40px 0px;
   text-align: center;
   -webkit-text-stroke: 2px #000;
   color: transparent;
-  font-size: 60px;
+  font-size: 4em;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
 
 .tarjeta_hombre {
@@ -164,11 +157,11 @@ footer {
     opacity: 0;
     transition: 0.5s; }
     .tarjeta_hombre .texto a {
-      font-size: 30px;
+      font-size: 2em;
       color: #fff;
       text-shadow: #000 6px 0 7px; }
     .tarjeta_hombre .texto p {
-      font-size: 15px;
+      font-size: 1em;
       color: #fff;
       text-shadow: #000 6px 0 7px; }
   .tarjeta_hombre .galeria:hover .texto {
@@ -177,8 +170,11 @@ footer {
 @media (max-width: 576px) {
   .tarjeta_hombre {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 20px 0px; } }
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 15px;
+    justify-content: center; }
+    .tarjeta_hombre .galeria {
+      width: 450px; } }
 
 @media (min-width: 576px) and (max-width: 991px) {
   .tarjeta_hombre {
