--- a/scss/_mujer.scss
+++ b/scss/_mujer.scss
@@ -1,12 +1,5 @@
-.h3_mujer {
-  width: 100%;
-  background-color: #fff;
-  padding: 40px 0px;
-  text-align: center;
-  -webkit-text-stroke: 2px #000;
-  color: transparent;
-  font-size: 60px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+.h2_mujer {
+  @extend .h2_hombre;
 }
 
 .tarjeta_mujer {
@@ -48,14 +41,20 @@
 @media (max-width: 576px) {
   .tarjeta_mujer {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 20px 0px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 15px;
+    justify-content: center;
+    .galeria {
+      width: 450px;
+    }
   }
 }
+
 @media (min-width: 576px) and (max-width: 991px) {
   .tarjeta_mujer {
     margin: 20px 0px;
   }
 }
+
 @media (min-width: 992px) {
 }
