--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Radio+Canada:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap");
-form {
-  margin: auto 600px; }
-  form div label {
-    color: #fff; }
+.form {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: auto; }
+  .form form {
+    padding: 1vw 3vw;
+    background-color: #e1e1e1;
+    border-radius: 5px; }
+  .form h2 {
+    margin: 20px 0;
+    font-size: 2em;
+    font-family: "Radio Canada", sans-serif;
+    color: #000; }
+  .form div {
+    margin: 5px 0px; }
+  .form input,
+  .form textarea {
+    border-radius: 5px;
+    border-style: none;
+    padding: 10px 5px;
+    width: 400px; }
+  .form .input {
+    background-color: #2a2a2a;
+    color: #e1e1e1; }
+  .form .submit:hover {
+    background-color: #000;
+    color: #e1e1e1; }
+  .form .submit {
+    margin: 15px 0; }
 
-@media (max-width: 576px) {
-  form {
-    margin: 50px auto;
-    margin-bottom: 60px;
-    width: 400px;
-    height: auto; } }
-
-@media (min-width: 576px) and (max-width: 991px) {
-  form {
-    margin: 50px auto;
-    margin-bottom: 60px;
-    width: 650px;
-    height: auto; } }
+@media (min-width: 320px) and (max-width: 576px) {
+  .form input,
+  .form textarea {
+    width: 270px; } }
 
 * {
   padding: 0;
@@ -27,13 +45,12 @@ form {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   background: url(../imagenes/gucci1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
-  backdrop-filter: blur(5px); }
+  background-attachment: fixed; }
 
 a {
   text-decoration: none; }
@@ -52,7 +69,7 @@ header .collapse li a {
 
 header .navbar-brand {
   font-family: "Roboto Slab", serif;
-  font-size: 4em;
+  font-size: 3.5em;
   color: #fff; }
 
 footer {
@@ -61,28 +78,165 @@ footer {
   margin-top: auto;
   text-align: center;
   background-color: #fff;
-  padding: 30px 0; }
+  padding-top: 20px; }
   footer li {
     display: flex;
     justify-content: center; }
   footer li a {
     color: #000;
-    font-size: 1em;
+    font-size: 15px;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
 
-.banner .carousel-caption a {
-  -webkit-text-stroke: 2px #4e4a49;
-  color: transparent;
-  font-size: 2em;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
-
-.banner .carousel-caption p {
-  color: #4e4a49;
-  font-size: 1em; }
+.banner .carousel-caption {
+  padding: 100 0; }
+  .banner .carousel-caption h2 {
+    padding: 30px 0px;
+    background-color: #e1e1e1; }
+  .banner .carousel-caption a {
+    color: #2a2a2a;
+    font-size: 60px;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
+  .banner .carousel-caption p {
+    font-family: sans-serif;
+    color: #4e4a49;
+    font-size: 20px; }
 
 .banner img {
   height: 800px;
   object-fit: cover; }
+
+.tarjeta_index {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 30px 20px; }
+  .tarjeta_index .galeria {
+    margin: 3px;
+    height: 500px;
+    background: var(--i);
+    background-size: cover; }
+  .tarjeta_index .texto {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+    .tarjeta_index .texto a {
+      font-size: 20px;
+      color: #fff;
+      text-shadow: #000 6px 0 7px; }
+
+@media (min-width: 320px) and (max-width: 399px) {
+  header .collapse li a {
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 0px; }
+  .banner .carousel-caption a {
+    font-size: 40px; }
+  .banner .carousel-caption p {
+    font-size: 15px; }
+  .banner img {
+    height: 600px; }
+  .tarjeta_index {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center; }
+    .tarjeta_index .galeria {
+      width: 100vw;
+      height: 300px; } }
+
+@media (min-width: 400px) and (max-width: 479px) {
+  header .collapse li a {
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 0px; }
+  .banner .carousel-caption a {
+    font-size: 40px; }
+  .banner .carousel-caption p {
+    font-size: 15px; }
+  .banner img {
+    height: 600px; }
+  .tarjeta_index {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center; }
+    .tarjeta_index .galeria {
+      width: 100vw;
+      height: 300px; } }
+
+@media (min-width: 480px) and (max-width: 576px) {
+  header .collapse li a {
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 0px; }
+  .banner .carousel-caption a {
+    font-size: 40px; }
+  .banner .carousel-caption p {
+    font-size: 15px; }
+  .banner img {
+    height: 600px; }
+  .tarjeta_index {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center; }
+    .tarjeta_index .galeria {
+      width: 100vw;
+      height: 300px; } }
+
+@media (min-width: 577px) and (max-width: 767px) {
+  header .collapse li a {
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 0px; }
+  .banner .carousel-caption a {
+    font-size: 40px; }
+  .banner .carousel-caption p {
+    font-size: 15px; }
+  .banner img {
+    height: 600px; }
+  .tarjeta_index {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center; }
+    .tarjeta_index .galeria {
+      width: 100vw;
+      height: 300px; } }
+
+@media (min-width: 768px) and (max-width: 900px) {
+  header .collapse li a {
+    font-size: 22px;
+    text-align: center;
+    padding: 10px 0px; }
+  .banner img {
+    height: 700px; }
+  .banner .carousel-caption a {
+    font-size: 50px; }
+  .banner .carousel-caption p {
+    font-size: 18px; }
+  .tarjeta_index {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center; }
+    .tarjeta_index .galeria {
+      height: 400px; } }
+
+@media (min-width: 901px) and (max-width: 1024px) {
+  header .collapse li a {
+    font-size: 22px;
+    text-align: center;
+    padding: 10px 0px; }
+  .banner img {
+    height: 700px; }
+  .banner .carousel-caption a {
+    font-size: 50px; }
+  .banner .carousel-caption p {
+    font-size: 18px; }
+  .tarjeta_index {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center; }
+    .tarjeta_index .galeria {
+      height: 400px; } }
 
 .tarjeta_mujer {
   display: grid;
@@ -114,33 +268,54 @@ footer {
   .tarjeta_mujer .galeria:hover .texto {
     opacity: 1; }
 
-@media (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 576px) {
   .tarjeta_mujer {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 15px;
     justify-content: center; }
     .tarjeta_mujer .galeria {
-      width: 450px; } }
+      width: 95vw;
+      height: 300px; }
+  .h2_mujer {
+    font-size: 35px; } }
 
-@media (min-width: 576px) and (max-width: 991px) {
+@media (min-width: 577px) and (max-width: 900px) {
   .tarjeta_mujer {
-    margin: 20px 0px; } }
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    justify-content: center; }
+    .tarjeta_mujer .galeria {
+      width: 47vw;
+      height: 300px; } }
+
+@media (min-width: 901px) and (max-width: 1024px) {
+  .tarjeta_mujer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center; }
+    .tarjeta_mujer .galeria {
+      width: 32vw;
+      height: 300px; }
+  .h2_mujer {
+    font-size: 3em; } }
+
+@media (min-width: 1025px) {
+  .h2_mujer {
+    font-size: 3em; } }
 
 .h2_hombre, .h2_mujer {
   width: 100%;
   background-color: #fff;
   padding: 40px 0px;
   text-align: center;
-  -webkit-text-stroke: 2px #000;
-  color: transparent;
-  font-size: 4em;
+  font-size: 2em;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
 
 .tarjeta_hombre {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin: 30px 60px; }
+  margin: 0px 30px;
+  margin-bottom: 10px; }
   .tarjeta_hombre .galeria {
     margin: 3px;
     height: 600px;
@@ -157,55 +332,77 @@ footer {
     opacity: 0;
     transition: 0.5s; }
     .tarjeta_hombre .texto a {
-      font-size: 2em;
+      font-size: 20px;
       color: #fff;
       text-shadow: #000 6px 0 7px; }
     .tarjeta_hombre .texto p {
-      font-size: 1em;
+      font-size: 20px;
       color: #fff;
       text-shadow: #000 6px 0 7px; }
   .tarjeta_hombre .galeria:hover .texto {
     opacity: 1; }
 
-@media (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 576px) {
   .tarjeta_hombre {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 15px;
     justify-content: center; }
     .tarjeta_hombre .galeria {
-      width: 450px; } }
+      width: 100vw;
+      height: 300px; } }
 
-@media (min-width: 576px) and (max-width: 991px) {
+@media (min-width: 577px) and (max-width: 900px) {
   .tarjeta_hombre {
-    margin: 30px 0px; } }
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    justify-content: center; }
+    .tarjeta_hombre .galeria {
+      width: 47vw;
+      height: 300px; } }
+
+@media (min-width: 901px) and (max-width: 1024px) {
+  .tarjeta_hombre {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center; }
+    .tarjeta_hombre .galeria {
+      width: 32vw;
+      height: 300px; }
+  .h2_hombre, .h2_mujer {
+    font-size: 3em; } }
+
+@media (min-width: 1025px) {
+  .h2_hombre, .h2_mujer {
+    font-size: 3em; } }
 
 .ss {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 60px; }
+  margin: 60px 0; }
   .ss iframe {
     width: 1000px;
     height: 800px; }
 
-.h2 {
-  margin: 60px 0px;
+.h2_ss {
+  width: 100%;
+  background-color: #fff;
+  padding: 40px 0px;
   text-align: center;
-  -webkit-text-stroke: 0.5px #fff;
+  -webkit-text-stroke: 2px #000;
   color: transparent;
-  font-size: 2.8em;
+  font-size: 2em;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif; }
 
 .tarjeta_ss {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  margin-bottom: 60px;
+  margin-bottom: 10px;
   justify-items: center;
   align-items: center; }
   .tarjeta_ss .galeria {
-    width: 500px;
-    height: 600px;
+    width: 400px;
+    height: 650px;
     background: var(--i);
     background-size: cover; }
   .tarjeta_ss .texto {
@@ -219,34 +416,56 @@ footer {
     opacity: 0;
     transition: 0.5s; }
     .tarjeta_ss .texto p {
-      font-size: 1em;
+      font-size: 15px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       font-weight: bold;
       text-align: center;
-      width: 300px;
+      width: 250px;
       color: #000;
       text-shadow: #fff 5px 0 5px; }
   .tarjeta_ss .galeria:hover .texto {
     opacity: 1; }
 
-@media (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 576px) {
   .ss iframe {
-    width: 500px;
-    height: 600px; }
+    width: 100vw;
+    height: 400px; }
   .tarjeta_ss {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 15px; }
+    justify-content: center;
+    grid-gap: 10px; }
     .tarjeta_ss .galeria {
-      width: 450px; } }
+      width: 95vw;
+      height: 300px; } }
 
-@media (min-width: 576px) and (max-width: 991px) {
+@media (min-width: 577px) and (max-width: 767px) {
   .ss iframe {
-    width: 800px;
-    height: 700px; }
+    width: 100vw;
+    height: 400px; }
   .tarjeta_ss {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 15px; }
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    grid-gap: 5px; }
     .tarjeta_ss .galeria {
-      width: 350px; } }
+      width: auto;
+      min-width: 90vw;
+      height: 300px; } }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .ss iframe {
+    width: 80vw;
+    height: 500px; }
+  .tarjeta_ss {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    justify-content: center;
+    grid-gap: 10px; }
+    .tarjeta_ss .galeria {
+      width: 45vw;
+      height: 400px; } }
+
+@media (min-width: 1025px) {
+  .h2_ss {
+    font-size: 3em; } }
